<resources>
    <string name="hotel_title">Отель: %s</string>
    <string name="distance_from_center_text">Расстояние от центра: %s км</string>
    <string name="no_places">Мест нет</string>
    <string name="free_places">Есть места</string>
    <string name="hotels_search">Поиск отелей</string>
    <string name="sort">Sort</string>
    <string name="distance_to_center">По расстоянию до центра</string>
    <string name="by_free_places_amount">По количеству свободных мест</string>
    <string name="s">Отель: %s</string>
    <string name="hotel_address">Адрес: %s</string>
    <string name="distance_to_city_center">Расстояние до центра: %s</string>
    <string name="free_places_in_hotel_details">Свободные номера: %s</string>
    <string name="choose_place">Выбрать номер</string>
    <string name="seems_no_photo">Кажется у этого отеля нет фото</string>
    <string name="error_while_loading_data">При загрузке данных произошла ошибка</string>
</resources>